--- a/views/night-events/index.handlebars
+++ b/views/night-events/index.handlebars
@@ -7,7 +7,7 @@
     </a>
       <p>{{snippet_text}}</p>   
     <img src={{rating_img_url_small}}>
-    <form action="/user/going" method="POST">
+    <form action="/user/going/?barId={{id}}" method="POST">
     <button type="submit" class="btn btn-default going">I'm Going tonight!</button>
     </form>
   </div>
