--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -5,72 +5,80 @@ $darker-color:#282222;
 $font-color:#1C243F;
 
 body{
-    font-family: $font-base;    
-    background-color: $darker-color;
+  font-family: $font-base;    
+  background-color: $darker-color;
 }
 
 #barList{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    div{
-        background-color: $darker-color;
-        border: none;
-        border-bottom: 2px solid $primary-color;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  span{
+    margin-right: 30px;
+    margin-left: 20px;
+    font-size: 16px;
+  }
+  div{
+    background-color: $darker-color;
+    border: none;
+    border-bottom: 2px solid $primary-color;
 
-    }
-    color: $primary-color;
-    h1{
-        text-align: center;
-    }
-    p{
-        font-size: 20px;
-        padding: 10px;
-        text-align: center;
-    }
+  }
+  color: $primary-color;
+  h1{
+    text-align: center;
+  }
+  p{
+    font-size: 20px;
+    padding: 10px;
+    text-align: center;
+  }
+  button{
+    margin-bottom: 5px;
+  }
 }
 /*
 button.btn.btn-default.going{
-    background-color: $primary-color;
-    display: block;
-    margin-left: 80%;
+background-color: $primary-color;
+display: block;
+margin-left: 80%;
 }*/
 
 #header{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    text-align: center;
-    color:$font-color; 
-    background-color: $primary-color;
-    p{
-        text-align: justify;
-    }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  color:$font-color; 
+  background-color: $primary-color;
+  p{
+    text-align: justify;
+  }
 }
 
 #events{    
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  form{
+    width: 50%;
     text-align: center;
-    form{
-        width: 50%;
-        text-align: center;
-        h3{
-            color:$primary-color;
-            margin-bottom: 20px;
-        }
-        button{
-            margin: 20px;
-            &:hover{
-                background-color: $darker-color;
-                color: #F4EBDB;
-                transition: all 0.5s;
-            }
-        }        
+    h3{
+      color:$primary-color;
+      margin-bottom: 20px;
     }
+    button{
+      margin: 20px;
+      &:hover{
+        background-color: $darker-color;
+        color: #F4EBDB;
+        transition: all 0.5s;
+      }
+    }        
+  }
 }
